gcc/testsuite/g++.dg/expr/return1.C
// PR c++/18545

struct A;

A foo()
{      // { dg-error "incomplete" }
  A a; // { dg-error "incomplete" }
  return a;
}
